--- a/SugarTraces/Base.lproj/Main.storyboard
+++ b/SugarTraces/Base.lproj/Main.storyboard
@@ -142,7 +142,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FO3-sw-Ooc">
-                                <rect key="frame" x="142.66666666666666" y="532" width="128.99999999999997" height="32"/>
+                                <rect key="frame" x="142.66666666666666" y="569" width="128.99999999999997" height="32"/>
                                 <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
                                 <state key="normal" title="Acknowledgement">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -152,7 +152,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6P-pd-JL5">
-                                <rect key="frame" x="185" y="474" width="44" height="32"/>
+                                <rect key="frame" x="185" y="511" width="44" height="32"/>
                                 <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
                                 <state key="normal" title="About">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -162,7 +162,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AMU-1l-qTm">
-                                <rect key="frame" x="144.66666666666666" y="590" width="124.99999999999997" height="32"/>
+                                <rect key="frame" x="144.66666666666666" y="627" width="124.99999999999997" height="32"/>
                                 <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
                                 <state key="normal" title="Terms and Privacy">
                                     <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -172,14 +172,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IbP-PC-PKU">
-                                <rect key="frame" x="171" y="401" width="72" height="30"/>
+                                <rect key="frame" x="171" y="438" width="72" height="30"/>
                                 <state key="normal" title="Send Data"/>
                                 <connections>
                                     <action selector="sendData:" destination="sc5-es-Ghr" eventType="touchUpInside" id="rBD-cQ-pLn"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paper" translatesAutoresizingMaskIntoConstraints="NO" id="eGG-5a-qGc">
-                                <rect key="frame" x="132" y="151" width="150" height="150"/>
+                                <rect key="frame" x="132" y="188" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="0sz-Jc-yDB" customClass="NSLayoutHelper" customModule="SugarTraces" customModuleProvider="target">
                                         <userDefinedRuntimeAttributes>
@@ -225,10 +225,16 @@
                             <constraint firstItem="b6P-pd-JL5" firstAttribute="top" secondItem="IbP-PC-PKU" secondAttribute="bottom" constant="43" id="nnA-If-zhC"/>
                             <constraint firstItem="FO3-sw-Ooc" firstAttribute="top" secondItem="b6P-pd-JL5" secondAttribute="bottom" constant="26" id="rQk-uB-f4T"/>
                             <constraint firstItem="eGG-5a-qGc" firstAttribute="centerX" secondItem="Ttj-Ew-ozf" secondAttribute="centerX" id="sWx-Cq-Nkb"/>
-                            <constraint firstItem="eGG-5a-qGc" firstAttribute="top" secondItem="sPl-0d-Blt" secondAttribute="top" constant="63" id="yJP-3Y-nmk" customClass="NSLayoutHelper" customModule="SugarTraces" customModuleProvider="target">
+                            <constraint firstItem="eGG-5a-qGc" firstAttribute="top" secondItem="sPl-0d-Blt" secondAttribute="top" constant="100" id="yJP-3Y-nmk" customClass="NSLayoutHelper" customModule="SugarTraces" customModuleProvider="target">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
                                         <real key="value" value="40"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone8">
+                                        <real key="value" value="63"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone8Plus">
+                                        <real key="value" value="63"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </constraint>
@@ -240,6 +246,7 @@
                         <outlet property="aboutBtn" destination="b6P-pd-JL5" id="JuI-Fo-811"/>
                         <outlet property="ackBtn" destination="FO3-sw-Ooc" id="PCG-mU-ZJ0"/>
                         <outlet property="bgBox" destination="S8Z-Jy-gdr" id="pw5-c8-wxq"/>
+                        <outlet property="sendDataOutlet" destination="IbP-PC-PKU" id="Dnm-iZ-LbB"/>
                         <outlet property="tpBtn" destination="AMU-1l-qTm" id="GkG-Jf-cAZ"/>
                     </connections>
                 </viewController>
