--- a/SugarTraces/Base.lproj/Main.storyboard
+++ b/SugarTraces/Base.lproj/Main.storyboard
@@ -372,14 +372,6 @@
                                     <segue destination="zQ8-Md-ccu" kind="presentation" identifier="toMainSegue" modalPresentationStyle="fullScreen" id="uTa-0e-jKc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEz-Z1-KZE">
-                                <rect key="frame" x="87" y="768" width="240" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="to auth"/>
-                                <connections>
-                                    <segue destination="Zhi-vM-rNq" kind="presentation" modalPresentationStyle="fullScreen" id="XFJ-fF-y1r"/>
-                                </connections>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="intro3" translatesAutoresizingMaskIntoConstraints="NO" id="K7p-S9-MCh">
                                 <rect key="frame" x="123.66666666666667" y="273" width="166.66666666666663" height="128"/>
                                 <constraints>
@@ -402,13 +394,29 @@
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEz-Z1-KZE">
+                                <rect key="frame" x="87" y="773" width="240" height="44"/>
+                                <color key="backgroundColor" red="0.1333333333" green="0.71372549019999998" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="HiA-YH-7Kz"/>
+                                    <constraint firstAttribute="width" constant="240" id="MoO-oz-7cx"/>
+                                </constraints>
+                                <state key="normal" title="Understood!">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Zhi-vM-rNq" kind="presentation" modalPresentationStyle="fullScreen" id="XFJ-fF-y1r"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="nN7-1t-t8t" firstAttribute="centerX" secondItem="GVV-xr-mtn" secondAttribute="centerX" id="AWN-8e-Bnp"/>
                             <constraint firstItem="nN7-1t-t8t" firstAttribute="top" secondItem="ads-BF-bnL" secondAttribute="bottom" constant="8" id="H5f-Zc-KvG"/>
+                            <constraint firstItem="vBd-8L-2CE" firstAttribute="top" secondItem="UEz-Z1-KZE" secondAttribute="bottom" constant="8" id="Jgv-qd-TSv"/>
                             <constraint firstItem="vBd-8L-2CE" firstAttribute="bottom" secondItem="vtd-PF-eII" secondAttribute="bottom" id="OAN-Iw-PHf"/>
+                            <constraint firstItem="UEz-Z1-KZE" firstAttribute="centerX" secondItem="GVV-xr-mtn" secondAttribute="centerX" id="QIy-Rq-F3h"/>
                             <constraint firstItem="vBd-8L-2CE" firstAttribute="centerX" secondItem="GVV-xr-mtn" secondAttribute="centerX" id="SV1-NT-6W1"/>
                             <constraint firstItem="K7p-S9-MCh" firstAttribute="centerX" secondItem="GVV-xr-mtn" secondAttribute="centerX" id="X2X-U6-XWp"/>
                             <constraint firstItem="ads-BF-bnL" firstAttribute="top" secondItem="K7p-S9-MCh" secondAttribute="bottom" constant="29" id="dIY-iA-tI7"/>
@@ -420,6 +428,7 @@
                     <navigationItem key="navigationItem" id="ao8-WL-EzW"/>
                     <connections>
                         <outlet property="pageControl" destination="vBd-8L-2CE" id="0ny-RG-LFx"/>
+                        <outlet property="understoodBtn" destination="UEz-Z1-KZE" id="nPs-nj-kIM"/>
                         <segue destination="W0t-z1-dV4" kind="presentation" identifier="backSegue" modalPresentationStyle="fullScreen" modalTransitionStyle="partialCurl" id="iMC-54-3gc"/>
                     </connections>
                 </viewController>
@@ -551,22 +560,54 @@ and view your current data.</string>
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="name" translatesAutoresizingMaskIntoConstraints="NO" id="sPF-39-EyX">
-                                <rect key="frame" x="123.66666666666666" y="273" width="166.66666666666666" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="name" translatesAutoresizingMaskIntoConstraints="NO" id="sPF-39-EyX">
+                                <rect key="frame" x="123.66666666666667" y="273" width="166.66666666666663" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="166.66999999999999" id="YPX-Ke-fcT"/>
+                                    <constraint firstAttribute="height" constant="128" id="ljQ-6S-Fkh"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9DW-aU-FE4">
+                                <rect key="frame" x="135.33333333333331" y="430" width="143.33333333333331" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gNj-pV-N5p">
+                                <rect key="frame" x="20" y="487" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fot-pI-f4H">
-                                <rect key="frame" x="115" y="548" width="185" height="37"/>
+                                <rect key="frame" x="87" y="548" width="240" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Let's start!"/>
+                                <color key="backgroundColor" red="0.1333333333" green="0.71372549019999998" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Let's start!">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
+                                    <action selector="nameEnterBtn:" destination="Zhi-vM-rNq" eventType="touchUpInside" id="cmc-Yu-7hC"/>
                                     <segue destination="zQ8-Md-ccu" kind="presentation" modalPresentationStyle="fullScreen" id="qKz-zS-IZP"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.88627450980392153" green="0.88627450980392153" blue="0.88627450980392153" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gNj-pV-N5p" firstAttribute="centerX" secondItem="OxG-fx-E55" secondAttribute="centerX" id="1Kr-m9-ogN"/>
+                            <constraint firstItem="9DW-aU-FE4" firstAttribute="centerX" secondItem="OxG-fx-E55" secondAttribute="centerX" id="1hn-Ww-SrH"/>
+                            <constraint firstItem="9DW-aU-FE4" firstAttribute="centerY" secondItem="OxG-fx-E55" secondAttribute="centerY" id="HPE-eC-qz5"/>
+                            <constraint firstItem="gNj-pV-N5p" firstAttribute="top" secondItem="9DW-aU-FE4" secondAttribute="bottom" constant="21" id="PqF-PZ-6RD"/>
+                            <constraint firstItem="9DW-aU-FE4" firstAttribute="top" secondItem="sPF-39-EyX" secondAttribute="bottom" constant="29" id="Q8d-hZ-tV6"/>
+                            <constraint firstItem="gNj-pV-N5p" firstAttribute="leading" secondItem="j4a-bK-arW" secondAttribute="leading" constant="20" id="R2e-6E-pDu"/>
+                            <constraint firstItem="sPF-39-EyX" firstAttribute="centerX" secondItem="OxG-fx-E55" secondAttribute="centerX" id="XR3-IS-JDA"/>
+                            <constraint firstItem="j4a-bK-arW" firstAttribute="trailing" secondItem="gNj-pV-N5p" secondAttribute="trailing" constant="20" id="uIY-wU-Aw1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="j4a-bK-arW"/>
                     </view>
+                    <connections>
+                        <outlet property="nameTextField" destination="gNj-pV-N5p" id="rzI-mN-3BY"/>
+                        <outlet property="startBtnOutlet" destination="fot-pI-f4H" id="qIY-Yb-WMV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Exr-0V-sVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
